Move momentum factor to WarrantPreferences